# IvantiDataLoader

./: .gitignore
deda-ingestor/: .env.example  .gitignore  README.md  pyproject.toml
deda-ingestor/src/deda_ingestor/: __main__.py  container.py
deda-ingestor/src/deda_ingestor/adapters/: base.py  product_adapter.py
deda-ingestor/src/deda_ingestor/config/: settings.py
deda-ingestor/src/deda_ingestor/core/: exceptions.py  models.py  product_service.py
deda-ingestor/src/deda_ingestor/repositories/: base.py  ivanti_repository.py  rabbitmq_repository.py
deda-ingestor/src/deda_ingestor/scheduler/: job_scheduler.py
deda-ingestor/src/deda_ingestor/utils/: logging.py  retry.py
deda-ingestor/tests/: conftest.py  test_ivanti_repository.py  test_product_adapter.py
ivanti-data-loader/: README.md  pyproject.toml
ivanti-data-loader/examples/: product_loader_config.yaml
ivanti-data-loader/src/ivanti_data_loader/: __main__.py
ivanti-data-loader/src/ivanti_data_loader/core/: base.py  exceptions.py  pipeline.py
ivanti-data-loader/src/ivanti_data_loader/plugins/: registry.py
ivanti-data-loader/src/ivanti_data_loader/plugins/loaders/: ivanti.py
ivanti-data-loader/src/ivanti_data_loader/plugins/readers/: excel.py
ivanti-data-loader/src/ivanti_data_loader/plugins/transformers/: field_mapper.py
